# Dailo/Dailo.Api/OpenApi/openapi.json
@@ -331,6 +331,27 @@
           }
         }
       }
+    },
+    "/api/auth/altcha-challenge": {
+      "get": {
+        "tags": [
+          "Identity"
+        ],
+        "description": "Returns an Altcha proof-of-work challenge for CAPTCHA verification.",
+        "operationId": "GetAltchaChallenge",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AltchaChallengeModel"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -352,6 +373,53 @@
           "refreshTokenExpiration": {
             "type": "string",
             "format": "date-time"
+          }
+        }
+      },
+      "AltchaChallengeModel": {
+        "required": [
+          "parameters",
+          "signature"
+        ],
+        "type": "object",
+        "properties": {
+          "parameters": {
+            "$ref": "#/components/schemas/AltchaChallengeParameters"
+          },
+          "signature": {
+            "type": "string"
+          }
+        }
+      },
+      "AltchaChallengeParameters": {
+        "required": [
+          "algorithm",
+          "cost",
+          "keyPrefix",
+          "nonce",
+          "salt"
+        ],
+        "type": "object",
+        "properties": {
+          "algorithm": {
+            "type": "string"
+          },
+          "cost": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "keyPrefix": {
+            "type": "string"
+          },
+          "nonce": {
+            "type": "string"
+          },
+          "salt": {
+            "type": "string"
           }
         }
       },
@@ -709,7 +777,8 @@
       "LoginUserCommand": {
         "required": [
           "email",
-          "password"
+          "password",
+          "captchaPayload"
         ],
         "type": "object",
         "properties": {
@@ -717,6 +786,9 @@
             "type": "string"
           },
           "password": {
+            "type": "string"
+          },
+          "captchaPayload": {
             "type": "string"
           }
         }
@@ -822,7 +894,8 @@
           "email",
           "password",
           "firstName",
-          "lastName"
+          "lastName",
+          "captchaPayload"
         ],
         "type": "object",
         "properties": {
@@ -836,6 +909,9 @@
             "type": "string"
           },
           "lastName": {
+            "type": "string"
+          },
+          "captchaPayload": {
             "type": "string"
           }
         }
